name:                pronk
version:             0.1.2
synopsis:            A library and command line app for HTTP load testing
description:
  A library and command line tool for HTTP load testing.  You can
  think of this package as similar to `httperf` or `ab`, only more
  modern, faster, more scalable, easier to deal with, programmable,
  and with customisable output.
  .
  The name "pronk" comes from the Afrikaans verb /pronk-/, meaning
  "to show off" or "to strut".
homepage:            https://github.com/bos/pronk
license:             BSD3
license-file:        LICENSE
author:              Bryan O'Sullivan <bos@serpentine.com>
maintainer:          Bryan O'Sullivan <bos@serpentine.com>
copyright:           (c) 2011 Bryan O'Sullivan
                     (c) 2011 MailRank, Inc.
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:
    README.markdown
    servers/ping/ping-servers.cabal
    servers/ping/src/*.hs

data-files:
  templates/*.tpl

flag developer
  description: operate in developer mode
  default: False

library
  hs-source-dirs: lib
  exposed-modules:
    Network.HTTP.LoadTest
    Network.HTTP.LoadTest.Analysis
    Network.HTTP.LoadTest.Environment
    Network.HTTP.LoadTest.Report
    Network.HTTP.LoadTest.Types
  other-modules:
    Paths_pronk

  -- disble optimisation because otherwise ghc 7.8 will panic
  ghc-options: -Wall -O0
  if flag(developer)
    ghc-prof-options: -auto-all

  build-depends:
    aeson,
    base < 5,
    bytestring >= 0.9.2.0,
    case-insensitive,
    cmdargs,
    conduit,
    criterion >= 0.6.0.0,
    deepseq,
    filepath,
    ghc-prim >= 0.2.0.0,
    hashable >= 1.2.0.2,
    hastache >= 0.4.2,
    http-conduit >= 2.0,
    http-types,
    lifted-base,
    meldable-heap,
    resourcet,
    statistics >= 0.10.0.0,
    text,
    text-format >= 0.3.0.4,
    time,
    transformers >= 0.2.2,
    unix-compat >= 0.3.0.2,
    unordered-containers >= 0.1.4.0,
    vector,
    vector-algorithms

executable pronk
  hs-source-dirs: app
  main-is: App.hs
  c-sources: app/cbits/rtsopts.c

  ghc-options: -threaded -rtsopts -Wall

  if flag(developer)
    ghc-prof-options: -auto-all

  build-depends:
    base          >= 4.7.0.2  && < 4.9,
    aeson         >= 0.8.0.2  && < 0.10,
    bytestring    >= 0.10.4.0 && < 0.11,
    cmdargs       >= 0.10.13  && < 0.11,
    conduit       >= 1.2.4.2  && < 1.3,
    criterion     >= 0.6.2.1,
    deepseq       >= 1.3.0.2  && < 1.5,
    http-conduit  >= 2.1.5    && < 2.2,
    network       >= 2.6.2.0  && < 2.7,
    pronk         >= 0.1.0    && < 0.2,
    resourcet     >= 1.1.5    && < 1.2,
    text          >= 1.2.1.1  && < 1.3,
    text-format   >= 0.3.1.1  && < 0.4,
    time          >= 1.4.2    && < 1.6

source-repository head
  type:     git
  location: git://github.com/bos/pronk

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/pronk
